crates/smart-config/tests/ui/derives/unsupported_param_type.stderr
error[E0277]: `()` param cannot be deserialized
 --> tests/ui/derives/unsupported_param_type.rs:5:12
  |
5 |     field: (),
  |            ^^ the trait `WellKnown` is not implemented for `()`
  |
  = note: Add #[config(with = _)] attribute to specify deserializer to use
  = note: If `()` is a config, add #[config(nest)] or #[config(flatten)]
  = help: the following other types implement trait `WellKnown`:
            BTreeMap<K, V>
            BTreeSet<T>
            Duration
            EtherAmount
            HashMap<K, V, S>
            HashSet<T, S>
            IpAddr
            Ipv4Addr
          and $N others
