crates/smart-config/tests/ui/derives/unsupported_param_type.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct TestConfig {
    field: (),
}

fn main() {}
